// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks both tests 1`] = `
"- Check types
[31m✖[39m Check types
[31m✖ [39m[90mtest/[37m[1ma.errors.ts[22m[90m[39m

  [1m[31m4:10:[39m Wrong error
[22m  Expected: [32mArgument of type '\\"1\\"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [39m[90mtest/[37m[1ma.types.ts[22m[90m[39m

  [1m[31m3:10:[39m Type error [90mTS2345[39m
[22m  [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [39m[90mtest/[37m[1mb.errors.ts[22m[90m[39m

  [1m[31m9:7:[39m Wrong error
[22m  Expected: [32mWrong[39m
  Got: [31mExpected 3 arguments, but got 2.[39m

  [1m[31m11:1:[39m Error was not found
[22m  [31mMissed[39m

  [1m[31m12:20:[39m Unexpected error
[22m  [31mExpected 1 arguments, but got 2.[39m

"
`;

exports[`checks mixed tests 1`] = `
"- Check types
[32m✔[39m Check types
[32m✔ [39m[90ma/[37m[1merrors.ts[22m[90m[39m
[32m✔ [39m[90ma/[37m[1mtypes.ts[22m[90m[39m
"
`;

exports[`checks negative tests 1`] = `
"- Check types
[31m✖[39m Check types
[31m✖ [39m[90m[37m[1ma.d.ts[22m[90m[39m

  [1m[31m1:18:[39m Type error [90mTS7010[39m
[22m  [31m'a', which lacks return-type annotation, implicitly has an 'any' return type.[39m

[31m✖ [39m[90mtest/[37m[1ma.errors.ts[22m[90m[39m

  [1m[31m4:10:[39m Wrong error
[22m  Expected: [32mArgument of type '\\"1\\"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [39m[90mtest/[37m[1mb.errors.ts[22m[90m[39m

  [1m[31m9:7:[39m Wrong error
[22m  Expected: [32mWrong[39m
  Got: [31mExpected 3 arguments, but got 2.[39m

  [1m[31m11:1:[39m Error was not found
[22m  [31mMissed[39m

  [1m[31m12:20:[39m Unexpected error
[22m  [31mExpected 1 arguments, but got 2.[39m

"
`;

exports[`checks positive tests 1`] = `
"- Check types
[31m✖[39m Check types
[31m✖ [39m[90mtest/[37m[1merrors.ts[22m[90m[39m

  [1m[31m4:14:[39m Wrong error
[22m  Expected: [32mArgument of type '\\"1\\"' is not assignable to parameter of type 'number'.[39m
  Got: [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

[31m✖ [39m[90mtest/[37m[1mtypes.ts[22m[90m[39m

  [1m[31m3:14:[39m Type error [90mTS2345[39m
[22m  [31mArgument of type 'string' is not assignable to parameter of type 'number'.[39m

"
`;

exports[`loads custom tsconfig.json 1`] = `
"- Check types
[32m✔[39m Check types
[32m✔ [39m[90m[37m[1mtypes.ts[22m[90m[39m
"
`;

exports[`supports simple cases 1`] = `
"- Check types
[32m✔[39m Check types
[32m✔ [39m[90mtest/[37m[1merrors.ts[22m[90m[39m
[32m✔ [39m[90mtest/[37m[1mtypes.ts[22m[90m[39m
"
`;
